# jacktrip-pi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  JackTripClient.cpp  JackTripClient.h  Makefile  PacketHeader.h  build.sh  buildall.sh  cmdline.txt  config.h  fifo.h  kernel.cpp  kernel.h  main.cpp  math.h
