add_executable(jtclient
        main.cpp
        kernel.cpp
        JackTripClient.cpp

        ../circle/include/circle/fs/fat/fat.h
        ../circle/include/circle/fs/fat/fatcache.h
        ../circle/include/circle/fs/fat/fatdir.h
        ../circle/include/circle/fs/fat/fatfs.h
        ../circle/include/circle/fs/fat/fatfsdef.h
        ../circle/include/circle/fs/fat/fatinfo.h
        ../circle/include/circle/fs/fsdef.h
        ../circle/include/circle/fs/partition.h
        ../circle/include/circle/fs/partitionmanager.h
        ../circle/include/circle/input/console.h
        ../circle/include/circle/input/keyboardbehaviour.h
        ../circle/include/circle/input/keyboardbuffer.h
        ../circle/include/circle/input/keymap.h
        ../circle/include/circle/input/linediscipline.h
        ../circle/include/circle/input/mouse.h
        ../circle/include/circle/input/mousebehaviour.h
        ../circle/include/circle/input/rpitouchscreen.h
        ../circle/include/circle/input/touchscreen.h
        ../circle/include/circle/net/arphandler.h
        ../circle/include/circle/net/checksumcalculator.h
        ../circle/include/circle/net/dhcpclient.h
        ../circle/include/circle/net/dnsclient.h
        ../circle/include/circle/net/http.h
        ../circle/include/circle/net/httpclient.h
        ../circle/include/circle/net/httpdaemon.h
        ../circle/include/circle/net/icmphandler.h
        ../circle/include/circle/net/in.h
        ../circle/include/circle/net/ipaddress.h
        ../circle/include/circle/net/linklayer.h
        ../circle/include/circle/net/mqtt.h
        ../circle/include/circle/net/mqttclient.h
        ../circle/include/circle/net/mqttreceivepacket.h
        ../circle/include/circle/net/mqttsendpacket.h
        ../circle/include/circle/net/netconfig.h
        ../circle/include/circle/net/netconnection.h
        ../circle/include/circle/net/netdevlayer.h
        ../circle/include/circle/net/netqueue.h
        ../circle/include/circle/net/netsocket.h
        ../circle/include/circle/net/netsubsystem.h
        ../circle/include/circle/net/nettask.h
        ../circle/include/circle/net/networklayer.h
        ../circle/include/circle/net/ntpclient.h
        ../circle/include/circle/net/ntpdaemon.h
        ../circle/include/circle/net/phytask.h
        ../circle/include/circle/net/retransmissionqueue.h
        ../circle/include/circle/net/retranstimeoutcalc.h
        ../circle/include/circle/net/routecache.h
        ../circle/include/circle/net/socket.h
        ../circle/include/circle/net/syslogdaemon.h
        ../circle/include/circle/net/tcpconnection.h
        ../circle/include/circle/net/tcprejector.h
        ../circle/include/circle/net/tftpdaemon.h
        ../circle/include/circle/net/transportlayer.h
        ../circle/include/circle/net/udpconnection.h
        ../circle/include/circle/sched/mutex.h
        ../circle/include/circle/sched/scheduler.h
        ../circle/include/circle/sched/semaphore.h
        ../circle/include/circle/sched/synchronizationevent.h
        ../circle/include/circle/sched/task.h
        ../circle/include/circle/sched/taskswitch.h
        ../circle/include/circle/sound/dmasoundbuffers.h
        ../circle/include/circle/sound/hdmisoundbasedevice.h
        ../circle/include/circle/sound/i2ssoundbasedevice.h
        ../circle/include/circle/sound/pcm512xsoundcontroller.h
        ../circle/include/circle/sound/pwmsoundbasedevice.h
        ../circle/include/circle/sound/pwmsounddevice.h
        ../circle/include/circle/sound/soundbasedevice.h
        ../circle/include/circle/sound/soundcontroller.h
        ../circle/include/circle/sound/usbsoundbasedevice.h
        ../circle/include/circle/sound/usbsoundcontroller.h
        ../circle/include/circle/sound/wm8960soundcontroller.h
        ../circle/include/circle/usb/gadget/dwusbgadget.h
        ../circle/include/circle/usb/gadget/dwusbgadgetendpoint.h
        ../circle/include/circle/usb/gadget/dwusbgadgetendpoint0.h
        ../circle/include/circle/usb/gadget/usbmidigadget.h
        ../circle/include/circle/usb/gadget/usbmidigadgetendpoint.h
        ../circle/include/circle/usb/dwhci.h
        ../circle/include/circle/usb/dwhcicompletionqueue.h
        ../circle/include/circle/usb/dwhcidevice.h
        ../circle/include/circle/usb/dwhciframeschediso.h
        ../circle/include/circle/usb/dwhciframeschednper.h
        ../circle/include/circle/usb/dwhciframeschednsplit.h
        ../circle/include/circle/usb/dwhciframeschedper.h
        ../circle/include/circle/usb/dwhciframescheduler.h
        ../circle/include/circle/usb/dwhciregister.h
        ../circle/include/circle/usb/dwhcirootport.h
        ../circle/include/circle/usb/dwhcixactqueue.h
        ../circle/include/circle/usb/dwhcixferstagedata.h
        ../circle/include/circle/usb/lan7800.h
        ../circle/include/circle/usb/smsc951x.h
        ../circle/include/circle/usb/usb.h
        ../circle/include/circle/usb/usbaudio.h
        ../circle/include/circle/usb/usbaudiocontrol.h
        ../circle/include/circle/usb/usbaudiofunctopology.h
        ../circle/include/circle/usb/usbaudiostreaming.h
        ../circle/include/circle/usb/usbbluetooth.h
        ../circle/include/circle/usb/usbcdcethernet.h
        ../circle/include/circle/usb/usbconfigparser.h
        ../circle/include/circle/usb/usbcontroller.h
        ../circle/include/circle/usb/usbdevice.h
        ../circle/include/circle/usb/usbdevicefactory.h
        ../circle/include/circle/usb/usbendpoint.h
        ../circle/include/circle/usb/usbfunction.h
        ../circle/include/circle/usb/usbgamepad.h
        ../circle/include/circle/usb/usbgamepadps3.h
        ../circle/include/circle/usb/usbgamepadps4.h
        ../circle/include/circle/usb/usbgamepadstandard.h
        ../circle/include/circle/usb/usbgamepadswitchpro.h
        ../circle/include/circle/usb/usbgamepadxbox360.h
        ../circle/include/circle/usb/usbgamepadxboxone.h
        ../circle/include/circle/usb/usbhcidevice.h
        ../circle/include/circle/usb/usbhcirootport.h
        ../circle/include/circle/usb/usbhid.h
        ../circle/include/circle/usb/usbhiddevice.h
        ../circle/include/circle/usb/usbhostcontroller.h
        ../circle/include/circle/usb/usbhub.h
        ../circle/include/circle/usb/usbkeyboard.h
        ../circle/include/circle/usb/usbmassdevice.h
        ../circle/include/circle/usb/usbmidi.h
        ../circle/include/circle/usb/usbmidihost.h
        ../circle/include/circle/usb/usbmouse.h
        ../circle/include/circle/usb/usbprinter.h
        ../circle/include/circle/usb/usbrequest.h
        ../circle/include/circle/usb/usbserial.h
        ../circle/include/circle/usb/usbserialcdc.h
        ../circle/include/circle/usb/usbserialch341.h
        ../circle/include/circle/usb/usbserialcp210x.h
        ../circle/include/circle/usb/usbserialft231x.h
        ../circle/include/circle/usb/usbserialpl2303.h
        ../circle/include/circle/usb/usbstandardhub.h
        ../circle/include/circle/usb/usbstring.h
        ../circle/include/circle/usb/usbtouchscreen.h
        ../circle/include/circle/usb/xhci.h
        ../circle/include/circle/usb/xhcicommandmanager.h
        ../circle/include/circle/usb/xhciconfig.h
        ../circle/include/circle/usb/xhcidevice.h
        ../circle/include/circle/usb/xhciendpoint.h
        ../circle/include/circle/usb/xhcieventmanager.h
        ../circle/include/circle/usb/xhcimmiospace.h
        ../circle/include/circle/usb/xhciring.h
        ../circle/include/circle/usb/xhciroothub.h
        ../circle/include/circle/usb/xhcirootport.h
        ../circle/include/circle/usb/xhcisharedmemallocator.h
        ../circle/include/circle/usb/xhcislotmanager.h
        ../circle/include/circle/usb/xhciusbdevice.h
        ../circle/include/circle/2dgraphics.h
        ../circle/include/circle/actled.h
        ../circle/include/circle/alloc.h
        ../circle/include/circle/armv6mmu.h
        ../circle/include/circle/armv7lpae.h
        ../circle/include/circle/armv8mmu.h
        ../circle/include/circle/atomic.h
        ../circle/include/circle/bcm2711.h
        ../circle/include/circle/bcm2711int.h
        ../circle/include/circle/bcm2835.h
        ../circle/include/circle/bcm2835int.h
        ../circle/include/circle/bcm2836.h
        ../circle/include/circle/bcm54213.h
        ../circle/include/circle/bcmframebuffer.h
        ../circle/include/circle/bcmmailbox.h
        ../circle/include/circle/bcmpciehostbridge.h
        ../circle/include/circle/bcmpropertytags.h
        ../circle/include/circle/bcmrandom.h
        ../circle/include/circle/bcmwatchdog.h
        ../circle/include/circle/chainboot.h
        ../circle/include/circle/chargenerator.h
        ../circle/include/circle/classallocator.h
        ../circle/include/circle/cputhrottle.h
        ../circle/include/circle/debug.h
        ../circle/include/circle/device.h
        ../circle/include/circle/devicenameservice.h
        ../circle/include/circle/devicetreeblob.h
        ../circle/include/circle/dma4channel.h
        ../circle/include/circle/dmachannel.h
        ../circle/include/circle/dmacommon.h
        ../circle/include/circle/exception.h
        ../circle/include/circle/exceptionhandler.h
        ../circle/include/circle/exceptionstub.h
        ../circle/include/circle/genericlock.h
        ../circle/include/circle/gpioclock.h
        ../circle/include/circle/gpiomanager.h
        ../circle/include/circle/gpiopin.h
        ../circle/include/circle/gpiopinfiq.h
        ../circle/include/circle/heapallocator.h
        ../circle/include/circle/i2cmaster.h
        ../circle/include/circle/i2cslave.h
        ../circle/include/circle/interrupt.h
        ../circle/include/circle/koptions.h
        ../circle/include/circle/latencytester.h
        ../circle/include/circle/logger.h
        ../circle/include/circle/macaddress.h
        ../circle/include/circle/machineinfo.h
        ../circle/include/circle/macros.h
        ../circle/include/circle/memio.h
        ../circle/include/circle/memory.h
        ../circle/include/circle/memorymap.h
        ../circle/include/circle/memorymap64.h
        ../circle/include/circle/mphi.h
        ../circle/include/circle/multicore.h
        ../circle/include/circle/netdevice.h
        ../circle/include/circle/new.h
        ../circle/include/circle/nulldevice.h
        ../circle/include/circle/numberpool.h
        ../circle/include/circle/pageallocator.h
        ../circle/include/circle/pagetable.h
        ../circle/include/circle/pci_regs.h
        ../circle/include/circle/ptrarray.h
        ../circle/include/circle/ptrlist.h
        ../circle/include/circle/ptrlistfiq.h
        ../circle/include/circle/pwmoutput.h
        ../circle/include/circle/qemu.h
        ../circle/include/circle/screen.h
        ../circle/include/circle/serial.h
        ../circle/include/circle/setjmp.h
        ../circle/include/circle/smimaster.h
        ../circle/include/circle/spimaster.h
        ../circle/include/circle/spimasteraux.h
        ../circle/include/circle/spimasterdma.h
        ../circle/include/circle/spinlock.h
        ../circle/include/circle/startup.h
        ../circle/include/circle/stdarg.h
        ../circle/include/circle/string.h
        ../circle/include/circle/synchronize.h
        ../circle/include/circle/synchronize64.h
        ../circle/include/circle/sysconfig.h
        ../circle/include/circle/time.h
        ../circle/include/circle/timer.h
        ../circle/include/circle/tracer.h
        ../circle/include/circle/translationtable64.h
        ../circle/include/circle/types.h
        ../circle/include/circle/usertimer.h
        ../circle/include/circle/util.h
        ../circle/include/circle/version.h
        ../circle/include/circle/virtualgpiopin.h
        ../circle/include/circle/writebuffer.h
        ../circle/include/assert.h
        ../circle/lib/fs/fat/fat.cpp
        ../circle/lib/fs/fat/fatcache.cpp
        ../circle/lib/fs/fat/fatdir.cpp
        ../circle/lib/fs/fat/fatfs.cpp
        ../circle/lib/fs/fat/fatinfo.cpp
        ../circle/lib/fs/fat/Makefile
        ../circle/lib/fs/Makefile
        ../circle/lib/fs/partition.cpp
        ../circle/lib/fs/partitionmanager.cpp
        ../circle/lib/input/console.cpp
        ../circle/lib/input/keyboardbehaviour.cpp
        ../circle/lib/input/keyboardbuffer.cpp
        ../circle/lib/input/keymap.cpp
        ../circle/lib/input/keymap_de.h
        ../circle/lib/input/keymap_es.h
        ../circle/lib/input/keymap_fr.h
        ../circle/lib/input/keymap_it.h
        ../circle/lib/input/keymap_uk.h
        ../circle/lib/input/keymap_us.h
        ../circle/lib/input/linediscipline.cpp
        ../circle/lib/input/Makefile
        ../circle/lib/input/mouse.cpp
        ../circle/lib/input/mousebehaviour.cpp
        ../circle/lib/input/rpitouchscreen.cpp
        ../circle/lib/input/touchscreen.cpp
        ../circle/lib/net/arphandler.cpp
        ../circle/lib/net/checksumcalculator.cpp
        ../circle/lib/net/dhcpclient.cpp
        ../circle/lib/net/dnsclient.cpp
        ../circle/lib/net/httpclient.cpp
        ../circle/lib/net/httpdaemon.cpp
        ../circle/lib/net/icmphandler.cpp
        ../circle/lib/net/ipaddress.cpp
        ../circle/lib/net/linklayer.cpp
        ../circle/lib/net/Makefile
        ../circle/lib/net/mqttclient.cpp
        ../circle/lib/net/mqttreceivepacket.cpp
        ../circle/lib/net/mqttsendpacket.cpp
        ../circle/lib/net/netconfig.cpp
        ../circle/lib/net/netconnection.cpp
        ../circle/lib/net/netdevlayer.cpp
        ../circle/lib/net/netqueue.cpp
        ../circle/lib/net/netsocket.cpp
        ../circle/lib/net/netsubsystem.cpp
        ../circle/lib/net/nettask.cpp
        ../circle/lib/net/networklayer.cpp
        ../circle/lib/net/ntpclient.cpp
        ../circle/lib/net/ntpdaemon.cpp
        ../circle/lib/net/phytask.cpp
        ../circle/lib/net/retransmissionqueue.cpp
        ../circle/lib/net/retranstimeoutcalc.cpp
        ../circle/lib/net/routecache.cpp
        ../circle/lib/net/socket.cpp
        ../circle/lib/net/syslogdaemon.cpp
        ../circle/lib/net/tcpconnection.cpp
        ../circle/lib/net/tcprejector.cpp
        ../circle/lib/net/tftpdaemon.cpp
        ../circle/lib/net/transportlayer.cpp
        ../circle/lib/net/udpconnection.cpp
        ../circle/lib/sched/Makefile
        ../circle/lib/sched/mutex.cpp
        ../circle/lib/sched/scheduler.cpp
        ../circle/lib/sched/semaphore.cpp
        ../circle/lib/sched/synchronizationevent.cpp
        ../circle/lib/sched/task.cpp
        ../circle/lib/sched/taskswitch.S
        ../circle/lib/sound/dmasoundbuffers.cpp
        ../circle/lib/sound/hdmisoundbasedevice.cpp
        ../circle/lib/sound/i2ssoundbasedevice.cpp
        ../circle/lib/sound/Makefile
        ../circle/lib/sound/pcm512xsoundcontroller.cpp
        ../circle/lib/sound/pwmsoundbasedevice.cpp
        ../circle/lib/sound/pwmsounddevice.cpp
        ../circle/lib/sound/soundbasedevice.cpp
        ../circle/lib/sound/usbsoundbasedevice.cpp
        ../circle/lib/sound/usbsoundcontroller.cpp
        ../circle/lib/sound/wm8960soundcontroller.cpp
        ../circle/lib/usb/gadget/dwusbgadget.cpp
        ../circle/lib/usb/gadget/dwusbgadgetendpoint.cpp
        ../circle/lib/usb/gadget/dwusbgadgetendpoint0.cpp
        ../circle/lib/usb/gadget/Makefile
        ../circle/lib/usb/gadget/README
        ../circle/lib/usb/gadget/usbmidigadget.cpp
        ../circle/lib/usb/gadget/usbmidigadgetendpoint.cpp
        ../circle/lib/usb/dwhcicompletionqueue.cpp
        ../circle/lib/usb/dwhcidevice.cpp
        ../circle/lib/usb/dwhciframeschediso.cpp
        ../circle/lib/usb/dwhciframeschednper.cpp
        ../circle/lib/usb/dwhciframeschednsplit.cpp
        ../circle/lib/usb/dwhciframeschedper.cpp
        ../circle/lib/usb/dwhciregister.cpp
        ../circle/lib/usb/dwhcirootport.cpp
        ../circle/lib/usb/dwhcixactqueue.cpp
        ../circle/lib/usb/dwhcixferstagedata.cpp
        ../circle/lib/usb/lan7800.cpp
        ../circle/lib/usb/Makefile
        ../circle/lib/usb/README
        ../circle/lib/usb/smsc951x.cpp
        ../circle/lib/usb/usbaudiocontrol.cpp
        ../circle/lib/usb/usbaudiofunctopology.cpp
        ../circle/lib/usb/usbaudiostreaming.cpp
        ../circle/lib/usb/usbbluetooth.cpp
        ../circle/lib/usb/usbcdcethernet.cpp
        ../circle/lib/usb/usbconfigparser.cpp
        ../circle/lib/usb/usbdevice.cpp
        ../circle/lib/usb/usbdevicefactory.cpp
        ../circle/lib/usb/usbendpoint.cpp
        ../circle/lib/usb/usbfunction.cpp
        ../circle/lib/usb/usbgamepad.cpp
        ../circle/lib/usb/usbgamepadps3.cpp
        ../circle/lib/usb/usbgamepadps4.cpp
        ../circle/lib/usb/usbgamepadstandard.cpp
        ../circle/lib/usb/usbgamepadswitchpro.cpp
        ../circle/lib/usb/usbgamepadxbox360.cpp
        ../circle/lib/usb/usbgamepadxboxone.cpp
        ../circle/lib/usb/usbhiddevice.cpp
        ../circle/lib/usb/usbhostcontroller.cpp
        ../circle/lib/usb/usbkeyboard.cpp
        ../circle/lib/usb/usbmassdevice.cpp
        ../circle/lib/usb/usbmidi.cpp
        ../circle/lib/usb/usbmidihost.cpp
        ../circle/lib/usb/usbmouse.cpp
        ../circle/lib/usb/usbprinter.cpp
        ../circle/lib/usb/usbrequest.cpp
        ../circle/lib/usb/usbserial.cpp
        ../circle/lib/usb/usbserialcdc.cpp
        ../circle/lib/usb/usbserialch341.cpp
        ../circle/lib/usb/usbserialcp210x.cpp
        ../circle/lib/usb/usbserialft231x.cpp
        ../circle/lib/usb/usbserialpl2303.cpp
        ../circle/lib/usb/usbstandardhub.cpp
        ../circle/lib/usb/usbstring.cpp
        ../circle/lib/usb/usbtouchscreen.cpp
        ../circle/lib/usb/xhcicommandmanager.cpp
        ../circle/lib/usb/xhcidevice.cpp
        ../circle/lib/usb/xhciendpoint.cpp
        ../circle/lib/usb/xhcieventmanager.cpp
        ../circle/lib/usb/xhcimmiospace.cpp
        ../circle/lib/usb/xhciring.cpp
        ../circle/lib/usb/xhciroothub.cpp
        ../circle/lib/usb/xhcirootport.cpp
        ../circle/lib/usb/xhcisharedmemallocator.cpp
        ../circle/lib/usb/xhcislotmanager.cpp
        ../circle/lib/usb/xhciusbdevice.cpp
        ../circle/lib/2dgraphics.cpp
        ../circle/lib/actled.cpp
        ../circle/lib/alloc.cpp
        ../circle/lib/assert.cpp
        ../circle/lib/bcm54213.cpp
        ../circle/lib/bcmframebuffer.cpp
        ../circle/lib/bcmmailbox.cpp
        ../circle/lib/bcmpciehostbridge.cpp
        ../circle/lib/bcmpropertytags.cpp
        ../circle/lib/bcmrandom.cpp
        ../circle/lib/bcmrandom200.cpp
        ../circle/lib/bcmwatchdog.cpp
        ../circle/lib/cache-v7.S
        ../circle/lib/chainboot.cpp
        ../circle/lib/chargenerator.cpp
        ../circle/lib/classallocator.cpp
        ../circle/lib/cputhrottle.cpp
        ../circle/lib/cxa_guard.cpp
        ../circle/lib/debug.cpp
        ../circle/lib/delayloop.S
        ../circle/lib/device.cpp
        ../circle/lib/devicenameservice.cpp
        ../circle/lib/devicetreeblob.cpp
        ../circle/lib/dma4channel.cpp
        ../circle/lib/dmachannel.cpp
        ../circle/lib/exceptionhandler.cpp
        ../circle/lib/exceptionhandler64.cpp
        ../circle/lib/exceptionstub.S
        ../circle/lib/exceptionstub64.S
        ../circle/lib/font.h
        ../circle/lib/gpioclock.cpp
        ../circle/lib/gpiomanager.cpp
        ../circle/lib/gpiopin.cpp
        ../circle/lib/gpiopinfiq.cpp
        ../circle/lib/heapallocator.cpp
        ../circle/lib/i2cmaster.cpp
        ../circle/lib/i2cslave.cpp
        ../circle/lib/interrupt.cpp
        ../circle/lib/interruptgic.cpp
        ../circle/lib/koptions.cpp
        ../circle/lib/latencytester.cpp
        ../circle/lib/libhelper.cpp
        ../circle/lib/libstub.S
        ../circle/lib/logger.cpp
        ../circle/lib/macaddress.cpp
        ../circle/lib/machineinfo.cpp
        ../circle/lib/Makefile
        ../circle/lib/memory.cpp
        ../circle/lib/memory64.cpp
        ../circle/lib/mphi.cpp
        ../circle/lib/multicore.cpp
        ../circle/lib/netdevice.cpp
        ../circle/lib/new.cpp
        ../circle/lib/nulldevice.cpp
        ../circle/lib/numberpool.cpp
        ../circle/lib/pageallocator.cpp
        ../circle/lib/pagetable.cpp
        ../circle/lib/ptrarray.cpp
        ../circle/lib/ptrlist.cpp
        ../circle/lib/ptrlistfiq.cpp
        ../circle/lib/purecall.cpp
        ../circle/lib/pwmoutput.cpp
        ../circle/lib/qemu.cpp
        ../circle/lib/screen.cpp
        ../circle/lib/serial.cpp
        ../circle/lib/setjmp.S
        ../circle/lib/smimaster.cpp
        ../circle/lib/spimaster.cpp
        ../circle/lib/spimasteraux.cpp
        ../circle/lib/spimasterdma.cpp
        ../circle/lib/spinlock.cpp
        ../circle/lib/startup.S
        ../circle/lib/startup64.S
        ../circle/lib/string.cpp
        ../circle/lib/synchronize.cpp
        ../circle/lib/synchronize64.cpp
        ../circle/lib/sysinit.cpp
        ../circle/lib/time.cpp
        ../circle/lib/timer.cpp
        ../circle/lib/tracer.cpp
        ../circle/lib/translationtable64.cpp
        ../circle/lib/usertimer.cpp
        ../circle/lib/util.cpp
        ../circle/lib/util_fast.S
        ../circle/lib/virtualgpiopin.cpp
        ../circle/lib/writebuffer.cpp
)
